--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: 'Under Construction'
 date: 2025-01-19
-permalink: /posts/20250119
+permalink: /posts/2025/01/blog-post-1/
 tags:
   - cool posts
   - category1
@@ -13,8 +13,8 @@ I am planning on writing this blog post, but it is not ready yet. Please check b
 Headings are cool (Apparently)
 ======
 
-You can have many headings (apparently)
+You can have many headings
 ======
 
-Aren't headings cool? (oh hell yeah)
+Aren't headings cool?
 ------
